[package]
name = "acoustic_ftp_rust"
version = "0.1.0"
authors = ["Russkih Anatoly <titanofdarkness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.8.1"
reqwest = "0.10.8"
tokio = { version = "0.3.1", features = ["full"] }