[package]
name = "acoustic_ftp_rust"
version = "0.1.0"
authors = ["Russkih Anatoly <titanofdarkness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.8.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.20.0", features = ["serialize"] }